# ruas

./: .gitignore  .tool-versions  CLAUDE.md  Cargo.toml  README.md  rust-toolchain.toml
.claude/skills/modulo-notas/: SKILL.md
.claude/skills/notes-frontend/: SKILL.md
.devcontainer/dev/: Dockerfile  devcontainer.json
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug.md  documentation.md  enhancement.md
.github/workflows/: ci.yml  demo.yml  publish.yml
.reasonix/skills/frontend-design/: SKILL.md
.reasonix/specs/: como-salvar-notas.md  design-refactor.md  exibicao-do-nome-das-notas-e-contatos.md  index-e-buscas.md  modulo-de-notas.md  otimizacoes-de-frontend.md
api/: Cargo.toml
api/src/: contacts.rs  main.rs  notes.rs  plugins.rs
core/: Cargo.toml
core/proptest-regressions/: contacts.txt  notes.txt
core/src/: appearance.rs  contacts.rs  filename.rs  index.rs  index_worker.rs  lib.rs  main.rs  module.rs  notes.rs  plugin.rs  scorer.rs  tantivy_index.rs  vault.rs
core/src/module/: capability.rs  command.rs  event.rs  settings.rs
core/src/plugin/: wasm.rs
core/tests/: integration.rs
docs/: estrutura-ruas.md  locale.md  ruas-icon.psd  ruas-logo.psd  theming.md
docs/.obsidian/: workspace.json
docs/dev/: 00-index.md  01-architecture.md  02-core-module-system.md  03-core-index.md  04-core-data-model.md  05-tauri-shell.md  06-http-api.md  07-frontend-workspace.md  08-frontend-stores.md  09-frontend-editor.md  10-i18n.md  11-styling.md  12-howto-new-module.md  13-howto-new-ui-view.md  14-filename-strategy.md  15-finances-module.md  16-plugin-system.md  17-plugin-pdk.md  17-search-architecture.md
docs/dev/.obsidian/: workspace.json
frontend/: astro.config.mjs  package.json  playwright.config.ts  pnpm-lock.yaml  vitest.config.ts
frontend/e2e/: contacts.spec.ts  mock-api.ts  notes.spec.ts  vault.spec.ts
frontend/src/: env.d.ts
frontend/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/resources/plugins/vcf-importer/: manifest.json  plugin.wasm
frontend/src-tauri/src/: appearance.rs  contacts.rs  lib.rs  notes.rs  plugins.rs  vault.rs  watcher.rs
frontend/src/components/: App.tsx  Greet.tsx  LeftPanel.tsx  Sidebar.tsx
frontend/src/components/contacts/: ContactDetail.tsx  ContactsList.tsx
frontend/src/components/notes/: BacklinksPanel.tsx  CommandPalette.tsx  EditorPane.tsx  FrontmatterEditor.tsx  FuzzyPopup.tsx  NoteDetail.tsx  NotesList.tsx  RightPanel.tsx  TableOfContents.tsx  ViewPane.tsx  catppuccinTheme.ts  livePreview.ts
frontend/src/components/notes/editor/: autoPairs.ts  blockIdConceal.ts  blockRef.ts  embedRenderer.ts  languageSupport.ts  latexRenderer.ts  mermaidRenderer.ts  wikiLink.ts
frontend/src/components/settings/: PermissionDialog.tsx  SettingsModal.tsx
frontend/src/components/shared/: ConfirmDialog.tsx  ContextMenu.tsx  EditorPane.tsx  MarkdownEditor.tsx  ViewPane.tsx  catppuccinTheme.ts
frontend/src/components/shared/editor/: autoPairs.ts  blockIdConceal.ts  codeBlockBg.ts  folding.ts  languageSupport.ts  latexRenderer.ts  mermaidLoader.ts  mermaidRenderer.ts  slashCommands.ts  tableInteraction.ts  tableTheme.ts  tableUtils.ts  tags.ts  toc.ts
frontend/src/components/vault/: VaultScreen.tsx
frontend/src/components/workspace/: PanelView.tsx  Workspace.tsx  workspaceStore.ts
frontend/src/i18n/: context.tsx  detect.ts
frontend/src/layouts/: Layout.astro
frontend/src/locales/en-US/: common.ftl  contacts.ftl  notes.ftl  settings.ftl  vault.ftl  workspace.ftl
frontend/src/locales/pt-BR/: common.ftl  contacts.ftl  notes.ftl  settings.ftl  vault.ftl  workspace.ftl
frontend/src/pages/: index.astro
frontend/src/stores/: appearanceStore.ts  blockTargetStore.ts  contactsStore.ts  extensionsStore.ts  fuzzyPopupStore.ts  historyStore.test.ts  historyStore.ts  layoutStore.ts  marketplaceStore.ts  paletteStore.ts  pluginsStore.ts  prefsStore.ts  settingsStore.ts  vaultStore.ts
frontend/src/styles/: global.css  themes.ts
frontend/src/utils/: ApiClient.ts  PlatformProxy.ts  api.ts  codeHighlight.ts  frontmatter.test.ts  frontmatter.ts
plugins/vcf-importer/: Cargo.toml  README.md  vcf_to_md.py
plugins/vcf-importer/src/: lib.rs
scripts/: build-plugins.sh  pre-commit-plugin-build.sh
