[package]
name = "ruas_api"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
actix-web = "4"
actix-cors = "0.7.1"
ruas_core = { path = "../core/" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
