[package]
name = "ruas_core"
version = "0.1.0"
edition = "2024"

[lib]
name = "ruas_core"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
regex = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
# bundled-full ensures FTS5 is available on all platforms (including mobile)
# bundled-full ensures FTS5 is available on all platforms (including mobile)
rusqlite = { version = "0.31", features = ["bundled-full"] }
# WASM plugin runtime — optional; enable with `cargo build --features wasm`
extism = { version = "1.30", optional = true }

[features]
wasm = ["dep:extism"]

[lints]
workspace = true

[dev-dependencies]
proptest = "1"
tempfile = "3"
