[package]
name = "Ruas"
version = "0.1.0"
description = "Cross-platform, privacy-first, self-hosted, all-in-one productivity app."
authors = ["KuryArt"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.0", features = [] }

[dependencies]
log = "0.4"
tauri = { version = "2.6.2", features = [] }
tauri-plugin-log = "2"
ruas_core = { path = "../../core/" }
